# immortalis

./: .docker-compose.env.example  .editorconfig  .env  .env.example  .gitignore  README.md  docker-compose.env  docker-compose.yml  generate-about.sh  generate-backend-about.sh  nginx.conf  package.json  run-immortalis-backend.sh
.github/workflows/: publish.yml
charts/immortalis/: Chart.yaml  values.yaml
charts/immortalis/templates/: _helpers.tpl  api-deployment.yaml  api-service.yaml  api-serviceaccount.yaml  archiver-deployment.yaml  archiver-serviceaccount.yaml  client-deployment.yaml  client-nginx-configmap.yaml  client-service.yaml  client-serviceaccount.yaml  common-migration-job.yaml  common-migrator-serviceaccount.yaml  ingress.yaml  tracker-deployment.yaml  tracker-serviceaccount.yaml
docs/: immortalis-0.1.0.tgz  immortalis-0.2.0.tgz  immortalis-0.3.0.tgz  immortalis-0.4.0.tgz  index.yaml
immortalis-backend/: .gitignore  Cargo.toml  Dockerfile  about.html  about.toml
immortalis-backend-api/: Cargo.toml
immortalis-backend-api/migrations/2023-05-04-212845_create_videos/: up.sql
immortalis-backend-api/src/: main.rs  request_models.rs  scheduled_archivals_event_handler.rs  schema.rs  utilities.rs  video.rs
immortalis-backend-archiver/: Cargo.toml  Dockerfile
immortalis-backend-archiver/src/: main.rs
immortalis-backend-common/: .env  Cargo.toml
immortalis-backend-common/migrations/2023-05-05-175842_create_videos/: down.sql  up.sql
immortalis-backend-common/migrations/2023-05-05-193147_create_video_status/: down.sql  up.sql
immortalis-backend-common/migrations/2023-05-06-102025_create_scheduled_archival/: down.sql  up.sql
immortalis-backend-common/migrations/2023-05-06-152550_add_scheduled_archival_not_before/: down.sql  up.sql
immortalis-backend-common/migrations/2023-05-06-154721_scheduled_archivals_make_url_unique/: down.sql  up.sql
immortalis-backend-common/migrations/2023-05-06-191734_create_tracked_collections/: down.sql  up.sql
immortalis-backend-common/migrations/2023-05-08-192056_videos_add_file_name/: down.sql  up.sql
immortalis-backend-common/migrations/2023-05-09-173906_videos_add_file_Extension/: down.sql  up.sql
immortalis-backend-common/migrations/2023-05-09-183939_videos_add_thumbnail_id_extension/: down.sql  up.sql
immortalis-backend-common/src/: download.rs  env_var_config.rs  env_var_names.rs  lib.rs  main.rs  schema.rs  video.rs
immortalis-backend-common/src/data_transfer_models/: mod.rs  video_dto.rs  video_with_downloads.rs
immortalis-backend-common/src/database_models/: download.rs  file.rs  mod.rs  scheduled_archival.rs  tracked_collection.rs  video.rs  video_status.rs
immortalis-backend-tracker/: Cargo.toml  Dockerfile
immortalis-backend-tracker/src/: main.rs
immortalis-backend/immortalis-backend-api/: Cargo.toml  Dockerfile
immortalis-backend/immortalis-backend-api/src/: main.rs  utilities.rs  websocket_actor.rs
immortalis-backend/immortalis-backend-archiver/: Cargo.toml
immortalis-backend/immortalis-backend-archiver/src/: main.rs
immortalis-backend/immortalis-backend-common/: Cargo.toml
immortalis-backend/immortalis-backend-common/migrations/2023-05-05-175842_create_videos/: up.sql
immortalis-backend/immortalis-backend-common/src/: env_var_config.rs  lib.rs  main.rs  schema.rs  utilities.rs
immortalis-backend/immortalis-backend-common/src/database_models/: file.rs  mod.rs  scheduled_archival.rs  tracked_collection.rs  video.rs  video_status.rs
immortalis-backend/immortalis-backend-tracker/: Cargo.toml
immortalis-backend/immortalis-backend-tracker/src/: main.rs  utilities.rs
immortalis-client/: .eslintrc.js  Dockerfile  about.txt  index.html  package.json  pnpm-lock.yaml  vite.config.ts
immortalis-client/src/: App.vue  consts.ts  eventService.ts  notification.ts
immortalis-client/src/components/: HelloWorld.vue  VideoEntry.vue
immortalis-client/src/lang/: de.ts  en.ts  ja.ts
immortalis-client/src/models/: dataChangeEvent.ts  download.ts  scheduledArchival.ts  (+3 more)
(+7 files in other folders)
