[package]
name = "immortalis-backend-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
chrono = { version= "0.4.24", features = ["serde"] }
immortalis-backend-common= { path="../immortalis-backend-common" }
serde = { version= "1.0.152", features = ["std", "derive"] }
serde_json = "1"
diesel = { version = "2.0.0", features = ["postgres", "chrono"] }
dotenvy = "0.15"
diesel-async = { version = "0.2.1", features = ["postgres", "deadpool"] }
actix-files = "0.6.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json"] }
url = "2.3.1"
