[package]
name = "immortalis-backend-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version= "0.4.24", features = ["serde"] }
serde = { version= "1.0.160", features = ["std", "derive"] }