[package]
name = "immortalis-backend-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
chrono = { version = "0.4.24", features = ["serde"] }
immortalis-backend-common = { path = "../immortalis-backend-common" }
serde = { version = "1.0.152", features = ["std", "derive"] }
serde_json = "1"
diesel = { version = "2.0.0", features = ["postgres", "chrono"] }
dotenvy = "0.15"
diesel-async = { version = "0.2.1", features = ["postgres", "deadpool"] }
actix-files = "0.6.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json"] }
url = "2.3.1"
uuid = { version = "1.3.2", features = ["serde", "v4"] }
sqlx = { version = "0.6", features = [
    "runtime-actix",
    "runtime-actix-rustls",
    "postgres",
] }
actix-web-actors = "4.2.0"
actix = { version = "0.13.0", features = ["macros"] }
envy = "0.4"
rust-s3 = "0.33"
tokio = "*"

[dependencies.openssl]
features = ["vendored"]
