[package]
name = "immortalis-backend-archiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
immortalis-backend-common = { path = "../immortalis-backend-common" }
diesel = { version = "2.0.0", features = ["postgres", "chrono"] }
dotenvy = "0.15"
diesel-async = { version = "0.2.1", features = ["postgres", "deadpool"] }
tokio = { version = "1", features = ["full"] }
async-process = "1.6.0"
chrono = { version = "0.4.24", features = ["serde"] }
youtube_dl = { version = "0.8.0", features = ["tokio"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json"] }
uuid = { version = "1.3.2", features = ["serde", "v4"] }
reqwest = { version = "0.11", features = ["stream"] }
envy = "0.4"
rust-s3 = "0.33.0"
tokio-util = { version = "0.7.8", features = ["io"] }
futures = "0.3.28"
