[package]
name = "immortalis-backend-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
serde = { version = "1.0.160", features = ["std", "derive"] }
diesel = { version = "2.0.0", features = ["postgres", "chrono", "uuid"] }
diesel-derive-enum = { version = "2.0.1", features = ["postgres"] }
diesel_migrations = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15"
uuid = { version = "1.3.2", features = ["serde"] }
envy = "0.4"
youtube_dl = { version = "0.9.0", features = ["tokio"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json"] }